fix spacing remark md

--- a/src/global.css
+++ b/src/global.css
@@ -22,6 +22,11 @@ li {
   padding-bottom: 10px;
 }
 
+.spacing {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
 table {
   background: white;
   border-radius: 3px;
